# gdal_ws

./: gdal_ws.code-workspace
gdal_beginning/: CMakeLists.txt  main.cpp
gdal_reprojection/: CMakeLists.txt  main.cpp
